# styloria

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-COMMERCIAL.md  README.md  SPAN_PROTOTYPE.md
.github/workflows/: release.yml
src/: descriptors.rs  known_properties.rs  lib.rs  parser.rs  serialize.rs  span.rs  spanned.rs  token.rs  tokenizer.rs  validate.rs
