[package]
name = "styloria"
version = "0.3.0"
edition = "2021"
description = "A pure-Rust CSS3 tokenizer, parser, and serializer (CSS Syntax Level 3)."
license = "AGPL-3.0-only OR LicenseRef-veripublica-Commercial"
repository = "https://github.com/veripublica/styloria"
homepage = "https://github.com/veripublica/styloria"
readme = "README.md"
keywords = ["css", "css3", "parser", "serializer", "tokenizer"]
categories = ["parser-implementations", "web-programming"]

[lib]
name = "styloria"
path = "src/lib.rs"
